Fix code block alignment to match main text container

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,9 +1,9 @@
 @import 'ext/solarized-light';
 
 div.highlighter-rouge {
-	max-width: 700px;
-	margin: 40px auto;
 	position: relative;
+	margin: 40px 0;
+	width: 100%;
 }
 
 .highlight {
